--- a/public/live.html
+++ b/public/live.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LiveCam</title>
+    <title>LiveCam - Live</title>
+
+    <link rel="stylesheet" href="./css/plume-all.css">
+    <link rel="stylesheet" href="./css/style.css">
+  </head>
+  <body>
+    Loading....
 
     <script
       src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"
@@ -11,11 +17,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <link rel="stylesheet" href="./css/style.css">
-  </head>
-  <body>
-    <img id="livecam" alt="Waiting..." class="invisible"/>
-
-    <script src="./js/main.js" type="text/javascript"></script>
+    <script src="./js/live.js" type="text/javascript"></script>
   </body>
 </html>
